--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -51,7 +51,7 @@
   color: #1a202c;
 }
 
-.project-category {
+.project-category { /* dynamic, static, fullstack + hosting */
   color: #4a6bff;
   font-size: 14px;
   margin-bottom: 15px;
